// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boardのスナップショットテスト Boardが△になった状態のSnapShot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="status"
      >
        Winner: △
      </div>
      <div
        class="board-row"
      >
        <button
          class="square"
        >
          △
        </button>
        <button
          class="square"
        >
          △
        </button>
        <button
          class="square"
        >
          △
        </button>
      </div>
      <div
        class="board-row"
      >
        <button
          class="square"
        >
          △
        </button>
        <button
          class="square"
        >
          △
        </button>
        <button
          class="square"
        >
          △
        </button>
      </div>
      <div
        class="board-row"
      >
        <button
          class="square"
        >
          △
        </button>
        <button
          class="square"
        >
          △
        </button>
        <button
          class="square"
        >
          △
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="status"
    >
      Winner: △
    </div>
    <div
      class="board-row"
    >
      <button
        class="square"
      >
        △
      </button>
      <button
        class="square"
      >
        △
      </button>
      <button
        class="square"
      >
        △
      </button>
    </div>
    <div
      class="board-row"
    >
      <button
        class="square"
      >
        △
      </button>
      <button
        class="square"
      >
        △
      </button>
      <button
        class="square"
      >
        △
      </button>
    </div>
    <div
      class="board-row"
    >
      <button
        class="square"
      >
        △
      </button>
      <button
        class="square"
      >
        △
      </button>
      <button
        class="square"
      >
        △
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Boardのスナップショットテスト Boardのデフォルト状態のSnapShot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="status"
      >
        次のプレイヤー: O
      </div>
      <div
        class="board-row"
      >
        <button
          class="square"
        />
        <button
          class="square"
        />
        <button
          class="square"
        />
      </div>
      <div
        class="board-row"
      >
        <button
          class="square"
        />
        <button
          class="square"
        />
        <button
          class="square"
        />
      </div>
      <div
        class="board-row"
      >
        <button
          class="square"
        />
        <button
          class="square"
        />
        <button
          class="square"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="status"
    >
      次のプレイヤー: O
    </div>
    <div
      class="board-row"
    >
      <button
        class="square"
      />
      <button
        class="square"
      />
      <button
        class="square"
      />
    </div>
    <div
      class="board-row"
    >
      <button
        class="square"
      />
      <button
        class="square"
      />
      <button
        class="square"
      />
    </div>
    <div
      class="board-row"
    >
      <button
        class="square"
      />
      <button
        class="square"
      />
      <button
        class="square"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
